--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,72 +1,14 @@
 <!-- SECCION DE "SOBRE MI" -->
 <div class="contenedor">
-<section class="sobremi">
-    <div class="container-fluid">
-        <div class="sobremi-titulo">
-            <span><i class="edit fa-regular fa-pen-to-square edit-sobre"></i></span>
-            <h2>Sobre Mi</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem doloremque quidem excepturi.
-                Magnam alias, orem ipsum dolor sit amet consectetur adipisicin commodi, sit incidunt vel velit
-                quod, fugit totam fuga ipsa repudiandae omnis esse. Minus, reiciendis incidunt.</p>
-        </div>
-        <div class="row sobre-info">
-            <div class="col-lg-4">
-                <img src="/assets/img/iconbig.png" alt="perfil">
-            </div>
-            <div class="col-lg-8">
-                <span><i class="edit fa-regular fa-pen-to-square edit-datos"></i></span>
-                <h2>Desarrollador Web FullStack</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique consectetur eveniet omnis
-                    sequi vitae sapiente.</p>
-                <div class="row">
-                    <div class="col-lg-6">
-                        <ul class="datos">
-                            <li>
-                                <i class="fa-solid fa-angles-right"></i>
-                                <strong>Website:</strong>
-                                <span>www.thom.com</span>
-                            </li>
-                            <li>
-                                <i class="fa-solid fa-angles-right"></i>
-                                <strong>Telefono:</strong>
-                                <span>+54 11-22888326</span>
-                            </li>
-                            <li>
-                                <i class="fa-solid fa-angles-right"></i>
-                                <strong>E-mail:</strong>
-                                <span>www.thom.com</span>
-                            </li>
-                            <li>
-                                <i class="fa-solid fa-angles-right"></i>
-                                <strong>Website:</strong>
-                                <span>www.thom.com</span>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-6">
-                        <ul class="datos">
-                            <li><i class="fa-solid fa-angles-right"></i>
-                                <strong>Website:</strong>
-                                <span>www.thom.com</span>
-                            </li>
-                            <li><i class="fa-solid fa-angles-right"></i>
-                                <strong>Website:</strong>
-                                <span>www.thom.com</span>
-                            </li>
-                            <li><i class="fa-solid fa-angles-right"></i>
-                                <strong>Website:</strong>
-                                <span>www.thom.com</span>
-                            </li>
-                            <li><i class="fa-solid fa-angles-right"></i>
-                                <strong>Website:</strong>
-                                <span>www.thom.com</span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- <p class="resumen">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi perspiciatis maiores maxime fugit rerum. Provident repellat nam, quae atque recusandae molestias illo praesentium facere, beatae error eaque accusamus! Molestiae, veniam!</p> -->
+    <section class="sobremi">
+        <div class="container-fluid">
+            <div class="sobremi-titulo">
+                <span><i class="edit fa-regular fa-pen-to-square edit-sobre"></i></span>
+                <h2>Sobre mi</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem doloremque quidem excepturi.
+                Magnam alias.<br>orem ipsum dolor sit amet consectetur adipisicin commodi, sit incidunt vel velit
+                quod, fugit totam fuga ipsa<br>repudiandae omnis esse. Minus, reiciendis incidunt.</p>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 </div>
