--- a/src/app/components/exp-edu/exp-edu.component.html
+++ b/src/app/components/exp-edu/exp-edu.component.html
@@ -1,58 +1,77 @@
-<div class="contenedor">
 <section class="edu-exp">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-6">
                 <span><i class="bx bx-plus-circle edit-edu-exp"></i></span>
                 <h2>Educacion</h2>
+
                 <div class="educacion-exp">
                     <div class="botones-edit">
                         <span><i class="edit fa-regular fa-pen-to-square"></i></span>
                         <span><i class="fa-solid fa-trash-can"></i></span>
                     </div>
-                    <h3>Desarrollo Web FullStack</h3>
-                    <h5>2021 - 2022</h5>
-                    <h4>Argentina Programa</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia maiores aperiam vero
-                        voluptate, fugiat sapiente earum ipsum perspiciatis tenetur illum nemo quidem rerum
-                        optio praesentium voluptatum? Quam in molestias quos.</p>
+                    <div class="ed">
+                        <h3>Desarrollo Web FullStack</h3>
+                        <h5>2021 - 2022</h5>
+                        <h4>Argentina Programa</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia maiores aperiam vero
+                            voluptate, fugiat sapiente earum ipsum perspiciatis tenetur illum nemo quidem rerum
+                            optio praesentium voluptatum? Quam in molestias quos.</p>
+                    </div>
                 </div>
+
                 <hr>
                 <div class="educacion-exp">
-                    <h3>Desarrollo Web FullStack</h3>
-                    <h5>2021 - 2022</h5>
-                    <h4>Argentina Programa</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia maiores aperiam vero
-                        voluptate, fugiat sapiente earum ipsum perspiciatis tenetur illum nemo quidem rerum
-                        optio praesentium voluptatum? Quam in molestias quos.</p>
+                    <div class="botones-edit">
+                        <span><i class="edit fa-regular fa-pen-to-square"></i></span>
+                        <span><i class="fa-solid fa-trash-can"></i></span>
+                    </div>
+                    <div class="ed">
+                        <h3>Desarrollo Web FullStack</h3>
+                        <h5>2021 - 2022</h5>
+                        <h4>Argentina Programa</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia maiores aperiam vero
+                            voluptate, fugiat sapiente earum ipsum perspiciatis tenetur illum nemo quidem rerum
+                            optio praesentium voluptatum? Quam in molestias quos.</p>
+                    </div>
                 </div>
             </div>
+
             <div class="col-lg-6">
                 <span><i class="bx bx-plus-circle edit-edu-exp"></i></span>
                 <h2>Experiencia Laboral</h2>
+                
                 <div class="educacion-exp">
                     <div class="botones-edit">
                         <span><i class="edit fa-regular fa-pen-to-square"></i></span>
                         <span><i class="fa-solid fa-trash-can"></i></span>
                     </div>
-                    <h3>Desarrollo Web FullStack</h3>
-                    <h5>2021 - 2022</h5>
-                    <h4>Argentina Programa</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia maiores aperiam vero
-                        voluptate, fugiat sapiente earum ipsum perspiciatis tenetur illum nemo quidem rerum
-                        optio praesentium voluptatum? Quam in molestias quos.</p>
+                    <div class="exp">
+                        <h3>Desarrollo Web FullStack</h3>
+                        <h5>2021 - 2022</h5>
+                        <h4>Argentina Programa</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia maiores aperiam vero
+                            voluptate, fugiat sapiente earum ipsum perspiciatis tenetur illum nemo quidem rerum
+                            optio praesentium voluptatum? Quam in molestias quos.</p>
+                    </div>
                 </div>
+
                 <hr>
                 <div class="educacion-exp">
-                    <h3>Desarrollo Web FullStack</h3>
-                    <h5>2021 - 2022</h5>
-                    <h4>Argentina Programa</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia maiores aperiam vero
-                        voluptate, fugiat sapiente earum ipsum perspiciatis tenetur illum nemo quidem rerum
-                        optio praesentium voluptatum? Quam in molestias quos.</p>
+                    <div class="botones-edit">
+                        <span><i class="edit fa-regular fa-pen-to-square"></i></span>
+                        <span><i class="fa-solid fa-trash-can"></i></span>
+                    </div>
+                    <div class="exp">
+                        <h3>Desarrollo Web FullStack</h3>
+                        <h5>2021 - 2022</h5>
+                        <h4>Argentina Programa</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia maiores aperiam vero
+                            voluptate, fugiat sapiente earum ipsum perspiciatis tenetur illum nemo quidem rerum
+                            optio praesentium voluptatum? Quam in molestias quos.</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-</div>
