--- a/src/app/components/proyects/proyects.component.html
+++ b/src/app/components/proyects/proyects.component.html
@@ -1,4 +1,3 @@
-<div class="contenedor">
 <section class="proyecto">
     <div class="container-fluid">
         <div class="proyecto-titulo">
@@ -7,9 +6,13 @@
                 Officiis, possimus blanditiis aut architecto corporis repudiandae itaque facilis soluta deleniti
                 beatae totam dolore, est voluptatem neque!</p>
         </div>
-        <div class="row row-cols-1 row-cols-md-2 g-4 proyecto-contenido">
+        <div class="row row-cols-1 row-cols-md-2 proyecto-contenido">
             <div class="col">
-                <div class="card h-100">
+                <div class="tarjetas">
+                    <div class="botones-edit-proyects">
+                        <span><i class="edit fa-regular fa-pen-to-square"></i></span>
+                        <span><i class="fa-solid fa-trash-can"></i></span>
+                    </div>
                     <img src="/assets/img/html-logo.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
@@ -20,9 +23,14 @@
                     </div>
                 </div>
             </div>
+            
             <div class="col">
-                <div class="card h-100">
-                    <img src="..." class="card-img-top" alt="...">
+                <div class="tarjetas">
+                    <div class="botones-edit-proyects">
+                        <span><i class="edit fa-regular fa-pen-to-square"></i></span>
+                        <span><i class="fa-solid fa-trash-can"></i></span>
+                    </div>
+                    <img src="/assets/img/html-logo.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <h6>Fecha de creacion</h6>
@@ -35,4 +43,4 @@
         </div>
     </div>
 </section>
-</div>
+
