--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,4 +1,3 @@
-<div class="contenedor">
 <section class="habilidades">
     <div class="container-fluid">
         <div class="skills-titulo">
@@ -13,98 +12,147 @@
                     <div class="col-md-12">
                         <span><i class="bx bx-plus-circle edit-skills"></i></span>
                         <h2>Front-End</h2>
-                        <div class="skill-icon">
-                            <span class="html"><i class="fa-brands fa-html5"></i></span>
+                        <div class="add add-hab-front">
+                            <div class="botones-edit-skills">
+                                <span><i class="edit fa-regular fa-pen-to-square"></i></span>
+                                <span><i class="fa-solid fa-trash-can"></i></span>
+                            </div>
+                            <div class="skill-icon">
+                                <span class="html"><i class="fa-brands fa-html5"></i></span>
+                            </div>
+                            <h3 class="progressbar-title">HTML5<span class="progressbar-value"></span></h3>
+                            <div class="progress">
+                                <div class="progress-bar html-color" role="progressbar" aria-valuenow="45"
+                                aria-valuemin="0" aria-valuemax="100" style="width: 93%;">Avanzado</div>
+                            </div>
                         </div>
-                        <h3 class="progressbar-title">HTML5<span class="progressbar-value">100%</span></h3>
-                        <div class="progress">
-                            <div class="progress-bar html-color" role="progressbar" aria-valuenow="45"
-                                aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+
+                        <div class="add add-hab-front">
+                            <div class="botones-edit-skills">
+                                <span><i class="edit fa-regular fa-pen-to-square"></i></span>
+                                <span><i class="fa-solid fa-trash-can"></i></span>
+                            </div>
+                            <div class="skill-icon">
+                                <span class="css"><i class="fa-brands fa-css3-alt"></i></span>
+                            </div>
+                            <h3 class="progressbar-title">CSS3<span class="progressbar-value"></span></h3>
+                            <div class="progress">
+                                <div class="progress-bar css-color" role="progressbar" aria-valuenow="45"
+                                aria-valuemin="0" aria-valuemax="100" style="width: 93%;">Avanzado</div>
+                            </div>
                         </div>
-                        <div class="skill-icon">
-                            <span class="css"><i class="fa-brands fa-css3-alt"></i></span>
+                        
+                        <div class="add add-hab-front">
+                            <div class="botones-edit-skills">
+                                <span><i class="edit fa-regular fa-pen-to-square"></i></span>
+                                <span><i class="fa-solid fa-trash-can"></i></span>
+                            </div>
+                            <div class="skill-icon">
+                                <span class="javascript"><i class="fa-brands fa-js"></i></span>
+                            </div>
+                            <h3 class="progressbar-title">JAVASCRIPT<span class="progressbar-value"></span></h3>
+                            <div class="progress">
+                                <div class="progress-bar javascript-color" role="progressbar" aria-valuenow="45"
+                                aria-valuemin="0" aria-valuemax="100" style="width: 30%;">Basico</div>
+                            </div>
                         </div>
-                        <h3 class="progressbar-title">CSS3<span class="progressbar-value">95%</span></h3>
-                        <div class="progress">
-                            <div class="progress-bar css-color" role="progressbar" aria-valuenow="45"
-                                aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>
+                        
+                        <div class="add add-hab-front">
+                            <div class="botones-edit-skills">
+                                <span><i class="edit fa-regular fa-pen-to-square"></i></span>
+                                <span><i class="fa-solid fa-trash-can"></i></span>
+                            </div>
+                            <div class="skill-icon">
+                                <span class="bootstrap"><i class="fa-brands fa-bootstrap"></i></span>
+                            </div>
+                            <h3 class="progressbar-title">BOOTSTRAP 5<span class="progressbar-value"></span></h3>
+                            <div class="progress">
+                                <div class="progress-bar bootstrap-color" role="progressbar" aria-valuenow="45"
+                                aria-valuemin="0" aria-valuemax="100" style="width: 50%;">Intermedio</div>
+                            </div>
                         </div>
-                        <div class="skill-icon">
-                            <span class="javascript"><i class="fa-brands fa-js"></i></span>
+                        
+                        <div class="add add-hab-front">
+                            <div class="botones-edit-skills">
+                                <span><i class="edit fa-regular fa-pen-to-square"></i></span>
+                                <span><i class="fa-solid fa-trash-can"></i></span>
+                            </div>
+                            <div class="skill-icon">
+                                <span class="angular"><i class="fa-brands fa-angular"></i></span>
+                            </div>
+                            <h3 class="progressbar-title">ANGULAR<span class="progressbar-value"></span></h3>
+                            <div class="progress">
+                                <div class="progress-bar angular-color" role="progressbar" aria-valuenow="45"
+                                aria-valuemin="0" aria-valuemax="100" style="width: 30%;">Basico</div>
+                            </div>
                         </div>
-                        <h3 class="progressbar-title">JAVASCRIPT<span class="progressbar-value">30%</span></h3>
-                        <div class="progress">
-                            <div class="progress-bar javascript-color" role="progressbar" aria-valuenow="45"
-                                aria-valuemin="0" aria-valuemax="100" style="width: 30%;"></div>
-                        </div>
-                        <div class="skill-icon">
-                            <span class="bootstrap"><i class="fa-brands fa-bootstrap"></i></span>
-                        </div>
-                        <h3 class="progressbar-title">BOOTSTRAP 5<span class="progressbar-value">45%</span></h3>
-                        <div class="progress">
-                            <div class="progress-bar bootstrap-color" role="progressbar" aria-valuenow="45"
-                                aria-valuemin="0" aria-valuemax="100" style="width: 45%;"></div>
-                        </div>
-                        <div class="skill-icon">
-                            <span class="angular"><i class="fa-brands fa-angular"></i></span>
-                        </div>
-                        <h3 class="progressbar-title">ANGULAR<span class="progressbar-value">5%</span></h3>
-                        <div class="progress">
-                            <div class="progress-bar angular-color" role="progressbar" aria-valuenow="45"
-                                aria-valuemin="0" aria-valuemax="100" style="width: 5%;"></div>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
+
             <div class="col-lg-4">
                 <div class="row skills-progreso">
                     <div class="col-md-12">
                         <span><i class="bx bx-plus-circle edit-skills"></i></span>
                         <h2>Back-End</h2>
-                        <div class="skill-icon">
-                            <span class="html"><i class="fa-brands fa-html5"></i></span>
-                        </div>
-                        <h3 class="progressbar-title">HTML5<span class="progressbar-value">100%</span></h3>
-                        <div class="progress">
-                            <div class="progress-bar html-color" role="progressbar" aria-valuenow="45"
-                                aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
-                        </div>
-                        <div class="skill-icon">
-                            <span class="css"><i class="fa-brands fa-css3-alt"></i></span>
-                        </div>
-                        <h3 class="progressbar-title">CSS3<span class="progressbar-value">95%</span></h3>
-                        <div class="progress">
-                            <div class="progress-bar css-color" role="progressbar" aria-valuenow="45"
-                                aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>
+                        <div class="add add-hab-back">
+                            <div class="botones-edit-skills">
+                                <span><i class="edit fa-regular fa-pen-to-square"></i></span>
+                                <span><i class="fa-solid fa-trash-can"></i></span>
+                            </div>
+                            <div class="skill-icon">
+                                <span class="mysql"><i class="fa-solid fa-database"></i></span>
+                            </div>
+                            <h3 class="progressbar-title">MySQL<span class="progressbar-value"></span></h3>
+                            <div class="progress">
+                                <div class="progress-bar mysql-color" role="progressbar" aria-valuenow="45"
+                                aria-valuemin="0" aria-valuemax="100" style="width: 30%;">Basico</div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+
             <div class="col-lg-4">
                 <div class="row skills-progreso">
                     <div class="col-md-12">
                         <span><i class="bx bx-plus-circle edit-skills"></i></span>
                         <h2>Sociales</h2>
-                        <div class="skill-icon">
-                            <span class="html"><i class="fa-brands fa-html5"></i></span>
-                        </div>
-                        <h3 class="progressbar-title">HTML5<span class="progressbar-value">100%</span></h3>
-                        <div class="progress">
-                            <div class="progress-bar html-color" role="progressbar" aria-valuenow="45"
+                        <div class="add add-hab-social">
+                            <div class="botones-edit-skills">
+                                <span><i class="edit fa-regular fa-pen-to-square"></i></span>
+                                <span><i class="fa-solid fa-trash-can"></i></span>
+                            </div>
+                            <div class="skill-icon">
+                                <span class="html"><i class="fa-brands fa-html5"></i></span>
+                            </div>
+                            <h3 class="progressbar-title">HTML5<span class="progressbar-value"></span></h3>
+                            <div class="progress">
+                                <div class="progress-bar html-color" role="progressbar" aria-valuenow="45"
                                 aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+                            </div>
                         </div>
-                        <div class="skill-icon">
-                            <span class="css"><i class="fa-brands fa-css3-alt"></i></span>
-                        </div>
-                        <h3 class="progressbar-title">CSS3<span class="progressbar-value">95%</span></h3>
-                        <div class="progress">
-                            <div class="progress-bar css-color" role="progressbar" aria-valuenow="45"
+                        
+                        <div class="add add-hab-social">
+                            <div class="botones-edit-skills">
+                                <span><i class="edit fa-regular fa-pen-to-square"></i></span>
+                                <span><i class="fa-solid fa-trash-can"></i></span>
+                            </div>
+                            <div class="skill-icon">
+                                <span class="css"><i class="fa-brands fa-css3-alt"></i></span>
+                            </div>
+                            <h3 class="progressbar-title">CSS3<span class="progressbar-value"></span></h3>
+                            <div class="progress">
+                                <div class="progress-bar css-color" role="progressbar" aria-valuenow="45"
                                 aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>
+                            </div>
                         </div>
+                        
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-</div>
+
