--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -3,7 +3,7 @@
     <section class="sobremi">
         <div class="container-fluid">
             <div class="sobremi-titulo">
-                <span><i class="edit fa-regular fa-pen-to-square edit-sobre"></i></span>
+                <span><i class="edit bi bi-pencil-square edit-sobre"></i></span>
                 <h2>Sobre mi</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem doloremque quidem excepturi.
                 Magnam alias.<br>orem ipsum dolor sit amet consectetur adipisicin commodi, sit incidunt vel velit
