--- a/src/app/components/exp-edu/exp-edu.component.html
+++ b/src/app/components/exp-edu/exp-edu.component.html
@@ -2,13 +2,13 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-6">
-                <span><i class="bx bx-plus-circle edit-edu-exp"></i></span>
+                <span><i class="bi bi-plus-circle edit-edu-exp"></i></span>
                 <h2>Educacion</h2>
 
                 <div class="educacion-exp">
                     <div class="botones-edit">
-                        <span><i class="edit fa-regular fa-pen-to-square"></i></span>
-                        <span><i class="fa-solid fa-trash-can"></i></span>
+                        <span><i class="edit bi bi-pencil-square"></i></span>
+                        <span><i class="bi bi-trash3"></i></span>
                     </div>
                     <div class="ed">
                         <h3>Desarrollo Web FullStack</h3>
@@ -23,8 +23,8 @@
                 <hr>
                 <div class="educacion-exp">
                     <div class="botones-edit">
-                        <span><i class="edit fa-regular fa-pen-to-square"></i></span>
-                        <span><i class="fa-solid fa-trash-can"></i></span>
+                        <span><i class="edit bi bi-pencil-square"></i></span>
+                        <span><i class="bi bi-trash3"></i></span>
                     </div>
                     <div class="ed">
                         <h3>Desarrollo Web FullStack</h3>
@@ -38,13 +38,13 @@
             </div>
 
             <div class="col-lg-6">
-                <span><i class="bx bx-plus-circle edit-edu-exp"></i></span>
+                <span><i class="bi bi-plus-circle edit-edu-exp"></i></span>
                 <h2>Experiencia Laboral</h2>
                 
                 <div class="educacion-exp">
                     <div class="botones-edit">
-                        <span><i class="edit fa-regular fa-pen-to-square"></i></span>
-                        <span><i class="fa-solid fa-trash-can"></i></span>
+                        <span><i class="edit bi bi-pencil-square"></i></span>
+                        <span><i class="bi bi-trash3"></i></span>
                     </div>
                     <div class="exp">
                         <h3>Desarrollo Web FullStack</h3>
@@ -59,8 +59,8 @@
                 <hr>
                 <div class="educacion-exp">
                     <div class="botones-edit">
-                        <span><i class="edit fa-regular fa-pen-to-square"></i></span>
-                        <span><i class="fa-solid fa-trash-can"></i></span>
+                        <span><i class="edit bi bi-pencil-square"></i></span>
+                        <span><i class="bi bi-trash3"></i></span>
                     </div>
                     <div class="exp">
                         <h3>Desarrollo Web FullStack</h3>
