--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="perfil">
             <img src="assets/img/icon.png" alt="">
-            <span><i class="edit fa-regular fa-pen-to-square edit-perfil"></i></span>
+            <span><i class="edit bi bi-pencil-square edit-perfil"></i></span>
             <h1>Thomas Hudson</h1>
             <p>FullStack Developer Jr.</p>
         </div>
@@ -19,20 +19,20 @@
         </div>
         <div class="nav-bar">
             <ul class="nav-list">
-                <li><a href="#"><i class='bx bx-home'></i>Inicio</a></li>
-                <li><a href="#"><i class='bx bx-user'></i>Acerca</a></li>
-                <li><a href="#"><i class='bx bx-bar-chart-alt'></i>Habilidades</a></li>
-                <li><a href="#"><i class='bx bx-notepad'></i>Proyectos</a></li>
-                <li><a href="#"><i class='bx bx-envelope'></i>Contacto</a></li>
+                <li><a href="#"><i class="bi bi-house"></i>Inicio</a></li>
+                <li><a href="#"><i class="bi bi-person"></i>Acerca</a></li>
+                <li><a href="#"><i class="bi bi-code"></i>Habilidades</a></li>
+                <li><a href="#"><i class="bi bi-hdd-stack"></i>Proyectos</a></li>
+                <li><a href="#"><i class="bi bi-envelope"></i>Contacto</a></li>
+                <li><a href="#"><i class="bi bi-box-arrow-in-right"></i>Login</a></li>
             </ul>
         </div>
-        <button type="button" class="btn btn-success">Login</button>
     </div>
 
     <!-- PARTE DEL BANNEAR PRINCIPAL CON UN TEXTO -->
 
     <div class="banner">
-        <span><i class="edit fa-regular fa-pen-to-square edit-banner"></i></span>
+        <span><i class="edit bi bi-pencil-square edit-banner"></i></span>
         <div class="banner-titulo">
             <h1>Thom Hudson</h1>
             <p>Desarrollador Web FullStack</p>
