--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -10,12 +10,12 @@
             <div class="col-lg-4">
                 <div class="row">
                     <div class="col-md-12">
-                        <span><i class="bx bx-plus-circle edit-skills"></i></span>
+                        <span><i class="bi bi-plus-circle edit-skills"></i></span>
                         <h2>Front-End</h2>
                         <div class="add add-hab-front">
                             <div class="botones-edit-skills">
-                                <span><i class="edit fa-regular fa-pen-to-square"></i></span>
-                                <span><i class="fa-solid fa-trash-can"></i></span>
+                                <span><i class="edit bi bi-pencil-square"></i></span>
+                                <span><i class="bi bi-trash3"></i></span>
                             </div>
                             <div class="skill-icon">
                                 <span class="html"><i class="fa-brands fa-html5"></i></span>
@@ -29,8 +29,8 @@
 
                         <div class="add add-hab-front">
                             <div class="botones-edit-skills">
-                                <span><i class="edit fa-regular fa-pen-to-square"></i></span>
-                                <span><i class="fa-solid fa-trash-can"></i></span>
+                                <span><i class="edit bi bi-pencil-square"></i></span>
+                                <span><i class="bi bi-trash3"></i></span>
                             </div>
                             <div class="skill-icon">
                                 <span class="css"><i class="fa-brands fa-css3-alt"></i></span>
@@ -44,8 +44,8 @@
                         
                         <div class="add add-hab-front">
                             <div class="botones-edit-skills">
-                                <span><i class="edit fa-regular fa-pen-to-square"></i></span>
-                                <span><i class="fa-solid fa-trash-can"></i></span>
+                                <span><i class="edit bi bi-pencil-square"></i></span>
+                                <span><i class="bi bi-trash3"></i></span>
                             </div>
                             <div class="skill-icon">
                                 <span class="javascript"><i class="fa-brands fa-js"></i></span>
@@ -59,8 +59,8 @@
                         
                         <div class="add add-hab-front">
                             <div class="botones-edit-skills">
-                                <span><i class="edit fa-regular fa-pen-to-square"></i></span>
-                                <span><i class="fa-solid fa-trash-can"></i></span>
+                                <span><i class="edit bi bi-pencil-square"></i></span>
+                                <span><i class="bi bi-trash3"></i></span>
                             </div>
                             <div class="skill-icon">
                                 <span class="bootstrap"><i class="fa-brands fa-bootstrap"></i></span>
@@ -74,8 +74,8 @@
                         
                         <div class="add add-hab-front">
                             <div class="botones-edit-skills">
-                                <span><i class="edit fa-regular fa-pen-to-square"></i></span>
-                                <span><i class="fa-solid fa-trash-can"></i></span>
+                                <span><i class="edit bi bi-pencil-square"></i></span>
+                                <span><i class="bi bi-trash3"></i></span>
                             </div>
                             <div class="skill-icon">
                                 <span class="angular"><i class="fa-brands fa-angular"></i></span>
@@ -94,12 +94,12 @@
             <div class="col-lg-4">
                 <div class="row skills-progreso">
                     <div class="col-md-12">
-                        <span><i class="bx bx-plus-circle edit-skills"></i></span>
+                        <span><i class="bi bi-plus-circle edit-skills"></i></span>
                         <h2>Back-End</h2>
                         <div class="add add-hab-back">
                             <div class="botones-edit-skills">
-                                <span><i class="edit fa-regular fa-pen-to-square"></i></span>
-                                <span><i class="fa-solid fa-trash-can"></i></span>
+                                <span><i class="edit bi bi-pencil-square"></i></span>
+                                <span><i class="bi bi-trash3"></i></span>
                             </div>
                             <div class="skill-icon">
                                 <span class="mysql"><i class="fa-solid fa-database"></i></span>
@@ -117,12 +117,12 @@
             <div class="col-lg-4">
                 <div class="row skills-progreso">
                     <div class="col-md-12">
-                        <span><i class="bx bx-plus-circle edit-skills"></i></span>
+                        <span><i class="bi bi-plus-circle edit-skills"></i></span>
                         <h2>Sociales</h2>
                         <div class="add add-hab-social">
                             <div class="botones-edit-skills">
-                                <span><i class="edit fa-regular fa-pen-to-square"></i></span>
-                                <span><i class="fa-solid fa-trash-can"></i></span>
+                                <span><i class="edit bi bi-pencil-square"></i></span>
+                                <span><i class="bi bi-trash3"></i></span>
                             </div>
                             <div class="skill-icon">
                                 <span class="html"><i class="fa-brands fa-html5"></i></span>
@@ -136,8 +136,8 @@
                         
                         <div class="add add-hab-social">
                             <div class="botones-edit-skills">
-                                <span><i class="edit fa-regular fa-pen-to-square"></i></span>
-                                <span><i class="fa-solid fa-trash-can"></i></span>
+                                <span><i class="edit bi bi-pencil-square"></i></span>
+                                <span><i class="bi bi-trash3"></i></span>
                             </div>
                             <div class="skill-icon">
                                 <span class="css"><i class="fa-brands fa-css3-alt"></i></span>
