--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -75,8 +75,8 @@
 }
 
 .main .perfil .edit-perfil:hover {
-    color: #1c2a3d;
-    transition: 0.3s;
+    color: #ff0055;
+    transition: 0.6s;
 }
 
 /**
@@ -135,9 +135,13 @@
     margin: 20px 0px 0px 13px;
 }
 
+.main .nav-bar .nav-list li {
+    margin-top: 10px;
+}
+
 .main .nav-bar .nav-list i {
-    font-size: 25px;
-    color: #1c2a3d;
+    font-size: 20px;
+    color: #ffffff;
     margin: 0px 10px 10px 0px;
 }
 
@@ -161,27 +165,6 @@
 * [FIN] - PARTE DE LA BARRA DE NAVEGACION (NAV-BAR)
 * --------------------------------------------------------------------- *
 */
-
-/**
-* [START] - BOTON DE LOGIN (LOGIN)
-* --------------------------------------------------------------------- *
-*/
-.main .info .btn-success {
-    background-color: #173b6c;
-    border: none;
-    margin: 20px 0px 0px 70px;
-}
-
-.main .info .btn-success:hover {
-    background-color: #264de4;
-    transition: 0.6s;
-}
-
-/**
-* [FIN] - BOTON DE LOGIN (LOGIN)
-* --------------------------------------------------------------------- *
-*/
-
 
 
 /**
@@ -221,8 +204,8 @@
 }
 
 .main .banner .edit-banner:hover {
-    color: #1c2a3d;
-    transition: 0.3s;
+    color: #ff0055;
+    transition: 0.6s;
 }
 
 /**
