--- a/src/app/components/proyects/proyects.component.html
+++ b/src/app/components/proyects/proyects.component.html
@@ -10,8 +10,8 @@
             <div class="col">
                 <div class="tarjetas">
                     <div class="botones-edit-proyects">
-                        <span><i class="edit fa-regular fa-pen-to-square"></i></span>
-                        <span><i class="fa-solid fa-trash-can"></i></span>
+                        <span><i class="edit bi bi-pencil-square"></i></span>
+                        <span><i class="bi bi-trash3"></i></span>
                     </div>
                     <img src="/assets/img/html-logo.png" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -27,8 +27,8 @@
             <div class="col">
                 <div class="tarjetas">
                     <div class="botones-edit-proyects">
-                        <span><i class="edit fa-regular fa-pen-to-square"></i></span>
-                        <span><i class="fa-solid fa-trash-can"></i></span>
+                        <span><i class="edit bi bi-pencil-square"></i></span>
+                        <span><i class="bi bi-trash3"></i></span>
                     </div>
                     <img src="/assets/img/html-logo.png" class="card-img-top" alt="...">
                     <div class="card-body">
